# media-archiver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-macos.sh  build.ps1  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
docs/: 01-overview.md  02-architecture.md  03-ui-ux.md  04-binary-management.md  05-data-model.md
docs/tasks/: 01-project-setup.md  02-binary-management.md  03-core-backend.md  04-ui-layout-and-state.md  05-media-ingestion-ui.md  06-download-execution.md  07-mvp-polish.md
scripts/: sync-version.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs  process_manager.rs
src-tauri/src/commands/: binaries.rs  disk.rs  download.rs  file_ops.rs  metadata.rs  mod.rs  storage.rs
src-tauri/src/models/: media.rs
src/components/: ErrorToast.svelte  InspectorPanel.svelte  MediaCard.svelte  Onboarding.svelte  ToggleSwitch.svelte
src/lib/: timeUtils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/binaries/: +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: binaries.ts  history.ts  metadataCache.ts  queue.ts  settings.ts
src/types/: index.ts
