[package]
name = "media_archiver"
version = "0.9.4"
description = "Local media archiving application built with Tauri and SvelteKit."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "media_archiver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
futures-util = "0.3.32"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "io-util", "macros", "process"] }
zip = "8.5.1"
flate2 = "1.1.9"
tar = "0.4.45"
tauri-plugin-dialog = "2.7.0"
which = "8.0.2"
fs4 = "0.13"
dirs-next = "2.0"
rfd = "0.17.2"

